link teachers and seminars

--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -54,8 +54,9 @@ de:
         max_attendees: Max. Anzahl Teilnehmer
         subtitle: Untertitel
         benefit: Nutzen
+        categories: Themata
         content: Inhalt
-        teacher: Referent
+        teachers: Referenten
         location: Veranstaltungsort
         notes: Bemerkungen
       user:
