display number of seminar where needed

--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -49,16 +49,20 @@ de:
         name: Bezeichnung
         unit_price: Einzelpreis
       location:
-        short: Kürzel
+        seminars: Seminare
       seminar:
+        number: Nummer
         max_attendees: Max. Anzahl Teilnehmer
         subtitle: Untertitel
         benefit: Nutzen
-        categories: Themata
+        categories: Themen
         content: Inhalt
         teachers: Referenten
         location: Veranstaltungsort
         notes: Bemerkungen
+      teacher:
+        profession: Tätigkeit
+        seminars: Seminare
       user:
         login: "Handle"
         email: E-Mail
