--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -66,6 +66,7 @@ de:
         teachers: Referenten
         location: Veranstaltungsort
         notes: Bemerkungen
+        year: Jahr
       teacher:
         profession: Tätigkeit
         seminars: Seminare
