--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -83,6 +83,7 @@ de:
         email: E-Mail
         username: Benutzername
         password: Passwort
+        role: Rolle
         encrypted_password: Verschlüsseltes Passwort
         reset_password_token: Reset-Password-Token
         reset_password_sent_at: Passwort zurück gesetzt am
