--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -1,32 +1,37 @@
 de:
   attributes:
-    active:         aktiv
-    address:        Adresse
-    city:           Ort
-    comments:       Bemerkungen
-    created_at:     Angelegt
-    date:           Datum
-    description:    Beschreibung
-    email:          E-Mail
-    end_date:       Ende
-    end_time:       bis
-    first_name:     Vorname
-    gender:         Geschlecht
-    last_name:      Nachname
-    mobile:         Mobil
-    notes:          Bemerkungen
-    phone:          Telefon
-    price:          Preis
-    salut:          Anrede
-    start_date:     Beginn
-    start_time:     von
-    street:         Straße/Nr.
-    title:          Titel
-    updated_at:     Bearbeitet
-    zip:            PLZ
-    location:       Veranstaltungsort
+    active:      aktiv
+    address:     Adresse
+    city:        Ort
+    comments:    Bemerkungen
+    created_at:  Angelegt
+    date:        Datum
+    description: Beschreibung
+    email:       E-Mail
+    end_date:    Ende
+    end_time:    bis
+    first_name:  Vorname
+    gender:      Geschlecht
+    last_name:   Nachname
+    mobile:      Mobil
+    notes:       Bemerkungen
+    phone:       Telefon
+    price:       Preis
+    profession:  Tätigkeit
+    salut:       Anrede
+    start_date:  Beginn
+    start_time:  von
+    street:      Straße/Nr.
+    title:       Titel
+    updated_at:  Bearbeitet
+    zip:         PLZ
+    location:    Veranstaltungsort
   activerecord:
     models:
+      attendee: Teilnehmer
+      booking:
+        one: Anmeldung
+        other: Anmeldungen
       category:
         one: Thema
         other: Themen
@@ -46,6 +51,15 @@ de:
         one: Referent
         other: Referenten
     attributes:
+      attendee:
+        booking: Anmeldung
+        seminar: Seminar
+      booking:
+        company: Firmenanmeldung
+        company_name: Name Firma
+        invoice_address: Rechnungsadresse
+        places: Plätze
+        attendees: Teilnehmer
       category:
         category: Oberthema
         categories: Unterthemen
@@ -64,6 +78,7 @@ de:
       location:
         seminars: Seminare
       seminar:
+        bookings: Anmeldungen
         number: Nummer
         max_attendees: Max. Anzahl Teilnehmer
         subtitle: Untertitel
@@ -75,8 +90,8 @@ de:
         notes: Bemerkungen
         year: Jahr
         events: Termine
+        price_text: Preis (Text)
       teacher:
-        profession: Tätigkeit
         seminars: Seminare
       user:
         login: "Handle"
