booking invoice_address as plain text instead of jsonb

--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -60,6 +60,7 @@ de:
         invoice_address: Rechnungsadresse
         places: Plätze
         attendees: Teilnehmer
+        invoice_address: Rechnungsadresse
       category:
         category: Oberthema
         categories: Unterthemen
