add number to category for correct sorting

--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -16,6 +16,7 @@ de:
     last_name:   Nachname
     mobile:      Mobil
     notes:       Bemerkungen
+    number:      Nummer
     phone:       Telefon
     price:       Preis
     profession:  Tätigkeit
