new names for benefit and content

--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -84,9 +84,9 @@ de:
         number: Nummer
         max_attendees: Max. Anzahl Teilnehmer
         subtitle: Untertitel
-        benefit: Nutzen
+        benefit: Ihr Nutzen
         categories: Themen
-        content: Inhalt
+        content: Seminarinhalt
         teachers: Referenten
         location: Veranstaltungsort
         notes: Bemerkungen
