added missing fields for booking form and no company booking anymore

--- a/config/locales/de/simple_form.yml
+++ b/config/locales/de/simple_form.yml
@@ -24,6 +24,7 @@ de:
         email: E-Mail-Adresse
         mobile: Mobiltelefon
         phone: Telefon
+        fax: Fax
     labels:
       address:
         city: Ort
@@ -38,3 +39,4 @@ de:
         email: E-Mail-Adresse
         mobile: Mobiltelefon
         phone: Telefon
+        fax: Fax
