--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -93,7 +93,7 @@ de:
         notes: Bemerkungen
         year: Jahr
         events: Termine
-        price_text: Preis (Text)
+        price_text: Gebühr
       teacher:
         seminars: Seminare
       user:
