--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -23,6 +23,12 @@ de:
     schools:
       - Aschersleben
       - Drübeck
+    form:
+      member: Mitglied im PARITÄTISCHEN LSA
+      member_institution: Einrichtung des PARITÄTISCHEN LSA
+      graduate: Absolvent*in der Fachschule
+      terms_of_service: 'Hiermit erkenne ich die Allgemeinen Geschäftsbedingungen des PARITÄTISCHEN Bildungswerkes LSA an.'
+      school: Schule
   categories:
     single:
       title: "%{id}"
