--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -15,6 +15,8 @@ de:
     new:
       title: Neue Anmeldung
       error: Anmeldung konnte nicht gespeichert werden. Bitte überprüfen Sie die markierten Felder.
+    show:
+      error: Anmeldung konnte nicht gespeichert werden. Bitte überprüfen Sie die markierten Felder.
     icon: book
     company_true: Firmenanmeldung
     company_false: Privat
