Seminar: use date_text to overwrite events data

--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -82,6 +82,7 @@ de:
         seminars: Seminare
       seminar:
         bookings: Anmeldungen
+        date_text: Termine (Text)
         number: Nummer
         max_attendees: Max. Anzahl Teilnehmer
         subtitle: Untertitel
