add company_address and invoice_address to booking as serialized fields

--- a/config/locales/de/simple_form.yml
+++ b/config/locales/de/simple_form.yml
@@ -20,15 +20,20 @@ de:
         street: Straße/Nr
         zip: PLZ
       booking:
+        company_title: Name der Arbeitsstelle
+        company_street: 'Straße/Nr'
+        company_zip: 'PLZ'
+        company_city: 'Ort'
         contact_person: Ansprechpartner
         contact_email: '* E-Mail-Adresse'
         contact_mobile: Mobiltelefon
         contact_phone: '* Telefon'
         contact_fax: Fax
         year: Jahr
-        address_street: '* Straße/Nr'
-        address_zip: '* PLZ'
-        address_city: '* Ort'
+        invoice_title: '* Firmenname / Name'
+        invoice_street: '* Straße/Nr'
+        invoice_zip: '* PLZ'
+        invoice_city: '* Ort'
         attendees:
           first_name: '* Vorname'
           last_name: '* Nachname'
