Seminars can be archived now

--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -3,6 +3,7 @@ de:
     active:      aktiv
     address:     Adresse
     attendees:   Teilnehmer
+    archived:    archiviert
     city:        Ort
     comments:    Bemerkungen
     created_at:  Angelegt
