add published attr to seminar

--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -21,6 +21,7 @@ de:
     phone:       Telefon
     price:       Preis
     profession:  Tätigkeit
+    published:   freigegeben
     salut:       Anrede
     start_date:  Beginn
     start_time:  von
