--- a/config/locales/de/rails.yml
+++ b/config/locales/de/rails.yml
@@ -215,4 +215,5 @@ de:
       default: "%A, %d. %B %Y, %H:%M Uhr"
       long: "%A, %d. %B %Y, %H:%M Uhr"
       short: "%d.%m.%Y"
+      short2: "%d.%m.%Y %H:%M"
     pm: nachmittags
