--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -10,13 +10,24 @@ de:
   destroyed: "%{model} gelöscht."
   confirm_delete: "%{model} löschen?"
   attendees:
-    icon: user
-  bookings:
     cancel:
-      title: Buchungsstornierung
+      title: Anmeldungsstornierung
       button_label: Stornieren
-      notice: Buchung wurde storniert.
-      confirm: Soll die Buchung wirklich storniert werden?
+      button_all_label: Alle stornieren
+      notice: Anmeldung wurde storniert.
+      confirm: Soll die Anmeldung wirklich storniert werden?
+      confirm: Sollen wirklich alle Teilnehmer dieser Anmeldung storniert werden?
+    icon: user
+    schools:
+      - Aschersleben
+      - Drübeck
+    form:
+      member: Mitglied im PARITÄTISCHEN LSA
+      member_institution: Einrichtung des PARITÄTISCHEN LSA
+      graduate: Absolvent*in der Fachschule
+      terms_of_service: 'Hiermit erkenne ich die Allgemeinen Geschäftsbedingungen des PARITÄTISCHEN Bildungswerkes LSA an.'
+      school: Schule
+  bookings:
     single:
       title: "%{id}"
     new:
@@ -25,9 +36,6 @@ de:
     show:
       error: Anmeldung konnte nicht gespeichert werden. Bitte überprüfen Sie die markierten Felder.
     icon: book
-    company_true: Firmenanmeldung
-    company_false: Privat
-    private:
     created: Sie haben sich erfolgreich für das Seminar angemeldet. Sie sollten in wenigen Minuten eine Bestätigung per E-Mail erhalten.
     schools:
       - Aschersleben
