--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -113,32 +113,31 @@ de:
       Sehr geehrte Damen und Herren,
 
       wir bedanken uns für Ihre Anmeldung zum Seminar
-    default_post_message: |
-      Bitte überweisen Sie den Gesamtbetrag innerhalb von 7 Tagen auf unser Konto mit Angabe der Rechnungsnummer.
-
-      Mit freundlichen Grüßen
-      Angelika May
-      Finanzbuchhaltung
-
+    default_post_message: ''
     pdf:
       company:
         name: 'Paritätische'
         phone: '0391/6293-313'
         email: 'amay@paritaet-lsa.de'
       title: "Teilnahmebestätigung / Rechnungs-Nr.:"
-      footer_message: |
+      footer_message_1: |
+        Bitte überweisen Sie den Gesamtbetrag innerhalb von 7 Tagen auf unser Konto mit Angabe der
+        Rechnungsnummer auf das Konto:
+
         <b>Bank für Sozialwirtschaft Magdeburg
         IBAN: DE30810205000007419401
         SWIFT/BIC: BFSWDE33MAG</b>
 
+        Mit freundlichen Grüßen
+
+      footer_message_2: |
+        Angelika May
+        Finanzbuchhaltung
+
         Bitte beachten Sie unsere Geschäftsbedingungen zum Thema Rücktritt und Kündigung:
-
         <font size="8">Für den/die Teilnehmer/in ist nach erfolgter schriftlicher Anmeldung ein Rücktritt vom Vertrag bis 14 Kalendertage vor Veranstaltungs-/Kursbeginn ohne Angabe von Gründen möglich.
-
         Bei einer späteren Absage als 14 Kalendertage vor Veranstaltungs-/Kursbeginn ist die Teilnahmegebühr in voller Höhe zu zahlen. Eine Ersatzperson kann jederzeit benannt werden. Bei Nichtteilnahme einer angemeldeten Person an einer Veranstaltung/einem Kurs ohne vorherige Absage, ist die Teilnahmegebühr in voller Höhe zu zahlen.</font>
-
         Die vollständigen Geschäftsbedingungen finden Sie im Internet unter www.bildungswerk-lsa.de.
-
         <b>Bitte beachten Sie, dass auf dem Hof leider keine Parkmöglichkeiten zur Verfügung stehen!</b>
   search:
     index:
