invoice pdf fine tuning

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -136,8 +136,7 @@ de:
         Finanzbuchhaltung
 
         Bitte beachten Sie unsere Geschäftsbedingungen zum Thema Rücktritt und Kündigung:
-        <font size="8">Für den/die Teilnehmer/in ist nach erfolgter schriftlicher Anmeldung ein Rücktritt vom Vertrag bis 15 Kalendertage vor Veranstaltungs-/Kursbeginn ohne Angabe von Gründen möglich.
-        Bei einer späteren Absage als 15 Kalendertage vor Veranstaltungs-/Kursbeginn ist die Teilnahmegebühr in voller Höhe zu zahlen. Eine Ersatzperson kann jederzeit benannt werden. Bei Nichtteilnahme einer angemeldeten Person an einer Veranstaltung/einem Kurs ohne vorherige Absage, ist die Teilnahmegebühr in voller Höhe zu zahlen.</font>
+        <font size="8">Für den/die Teilnehmer/in ist nach erfolgter schriftlicher Anmeldung ein Rücktritt vom Vertrag bis 15 Kalendertage vor Veranstaltungs-/Kursbeginn ohne Angabe von Gründen möglich. Bei einer späteren Absage als 15 Kalendertage vor Veranstaltungs-/Kursbeginn ist die Teilnahmegebühr in voller Höhe zu zahlen. Eine Ersatzperson kann jederzeit benannt werden. Bei Nichtteilnahme einer angemeldeten Person an einer Veranstaltung/einem Kurs ohne vorherige Absage, ist die Teilnahmegebühr in voller Höhe zu zahlen.</font>
         Die vollständigen Geschäftsbedingungen finden Sie im Internet unter www.bildungswerk-lsa.de.
         <b>Bitte beachten Sie, dass auf dem Hof leider keine Parkmöglichkeiten zur Verfügung stehen!</b>
   search:
