--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -114,6 +114,7 @@ de:
         year: Jahr
         events: Termine
         price_text: Gebühr
+        statistic: PRAS
       teacher:
         seminars: Seminare
       user:
