seminar#show: only show allowed content

--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -102,6 +102,7 @@ de:
       seminar:
         bookings: Anmeldungen
         date_text: Termine (Text)
+        invoices: Rechnungen
         number: Nummer
         max_attendees: Max. Anzahl Teilnehmer
         subtitle: Untertitel
