--- a/config/locales/de/views.yml
+++ b/config/locales/de/views.yml
@@ -26,6 +26,16 @@ de:
         graduate: Absolvent*in der Fachschule
         terms_of_service: 'Hiermit erkenne ich die Allgemeinen Geschäftsbedingungen des PARITÄTISCHEN Bildungswerkes LSA an.'
         school: Schule
+    invoices:
+      new:
+        title: Rechnung schreiben
+      show:
+        title: Rechnung %{number} bearbeiten
+    locations:
+      form:
+        error: Veranstaltungsort konnte nicht gespeichert werden.
+      new:
+        title: Veranstaltungsort anlegen
     search:
       index:
         title: Suchergebnisse
@@ -65,19 +75,11 @@ de:
       error: Firma konnte nicht gespeichert werden.
     new:
       title: Neue Firma
-  locations:
-    form:
-      error: Veranstaltungsort konnte nicht gespeichert werden.
-    new:
-      title: Veranstaltungsort anlegen
   teachers:
     form:
       error: Referent konnte nicht gespeichert werden.
     new:
       title: Referent anlegen
-  invoices:
-    new:
-      title: Rechnung schreiben
   users:
     form:
       error: Benutzer konnte nicht gespeichert werden.
