--- a/config/locales/de/rails.yml
+++ b/config/locales/de/rails.yml
@@ -232,3 +232,6 @@ de:
       header:
         warning_seminar_layout_finished: "Für dieses Seminar wurde der Status schon auf 'Layout fertig gesetzt.'"
         confirm_message_finished_edit: "Soll das Seminar wirklich bearbeitet werden, obwohl es schon als 'Layout fertig' markiert wurde?"
+  uploads:
+    new:
+      title: "Neuer Upload"
