Homepage dynamic seminars, admin pages

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -40,6 +40,8 @@ de:
     icon: briefcase
   locations:
     icon: map-marker
+  pages:
+    icon: file-text
   teachers:
     icon: graduation-cap
   seminars:
