add skill_sets and remarks to teachers

--- a/config/locales/de/active_record.yml
+++ b/config/locales/de/active_record.yml
@@ -128,6 +128,8 @@ de:
         external_booking_address: Externe Buchung über
       teacher:
         seminars: Seminare
+        skill_sets: Fachbereiche
+        remarks: Bemerkungen
       upload:
         upload_file: Datei
         user: von
